kubernetes-ops/eventual-hub/jupyterhub.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jupyterhub
  namespace: eventual-hub
  labels:
    app: jupyterhub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyterhub
  template:
    metadata:
      labels:
        app: jupyterhub
    spec:
      serviceAccountName: jupyterhub-sa
      containers:
      - name: jupyterhub
        image: localhost:5001/eventual-hub-jupyterhub:latest
        ports:
        - containerPort: 8000
          name: jupyterhub-port
---

apiVersion: v1
kind: Service
metadata:
  name: jupyterhub-svc
  namespace: eventual-hub
spec:
  selector:
    app: jupyterhub
  ports:
  - name: jupyterhub-port
    protocol: TCP
    port: 8000
    targetPort: jupyterhub-port
