kubernetes-ops/eventual-hub/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eventual-hub-ingress
  namespace: eventual-hub
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: backend-svc
            port:
              number: 8000
      - pathType: Prefix
        path: "/jupyter"
        backend:
          service:
            name: jupyterhub-svc
            port:
              number: 8000
